# rustedbytes-nmea

./: .gitignore  CHANGELOG.md  Cargo.toml  NMEA-0183-COMPLIANCE.md  NMEA-183-COMPLIANCE.md  NMEA-INTRODUCTION.md  README.md  RELEASE.md  SIMPLIFICATION_SUMMARY.md
.github/: copilot-instructions.md
.github/scripts/: count_tests.sh  update_test_badge.sh  validate_release_workflow.sh
.github/workflows/: release.yml  test.yml
references/: nmea_edge_cases.txt  nmea_invalid.txt  nmea_valid.txt
src/: lib.rs  message.rs  parser.rs  types.rs
src/commands/: mod.rs
src/commands/st/: anti_jam.rs  geofence.rs  geofence_circle.rs  get_sw_version.rs  get_unique_code.rs  low_power_on_off.rs  lpa.rs  mod.rs  odometer.rs  standby_enable.rs  standby_force.rs
src/message/: gga.rs  gll.rs  gns.rs  gsa.rs  gsv.rs  rmc.rs  vtg.rs
src/message/st/: diff.rs  get_unique_code.rs  hw_version.rs  low_power_on_off.rs  mod.rs  standby_enable.rs  sw_version.rs  tg.rs
